# watchdog-node

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .space.kts  CHANGELOG.md  CHASSIS_DESIGN_GUIDE.md  CODE_IMPROVEMENTS.md  Dockerfile  Dockerfile.dev  HARDWARE_COMPATIBILITY.md  HARDWARE_SELECTED.md  IMPROVEMENTS.md  QUICK_START_IMPROVEMENTS.md  README.md  SECURITY.md  SELECTED_COMPONENTS_SUMMARY.md  SUMMARY.md  WATCHDOG_PLAN.md  WatchDog  conftest.py  docker-compose.debug.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  gunicorn.sh  main.py  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  test.py
.github/: dependabot.yml
.github/workflows/: backend.yml  ci.yml  codacy.yml  codeql-analysis.yml  codeql.yml  django.yml  docker-publish.yml  docker.yml  label.yml  python-app.yml  python-tests.yml  stale.yml
3d_models/: README.md  WatchDog_Assembly.20251104-131737.FCBak  WatchDog_Assembly.20251104-143157.FCBak  WatchDog_Assembly.FCStd
3d_models/freecad_scripts/: README.md  assemble.py  base_plate.py  camera_bracket.py  cooling_duct.py  create_all.py  electronics_compartment.py  export_parameters.py  lidar_tower.py  parameters.py  side_panels.py  top_cover.py
app/: initializer.py  main.py
app/api/v1/: __init__.py
app/api/v1/bots/: methods.py
app/api/v1/ml/: methods.py
app/bot/: __init__.py  bot.py
app/bot/classes/: base.py  bots.py
app/bots/classes/: bots.py  manager.py
app/bots/models/tortoise/: bots.py
app/catkin_ws/src/beginner_tutorials/: package.xml
app/config/: cfg.py  db.py  openapi.py
app/core/: utils.py  watcher.py
app/core/models/tortoise/: metrics.py
app/core/routers/: __init__.py  nodes.py
app/ml/: consts.py  nets.py
app/ml/classes/: sberbank.py  trainer.py
app/utils/: factory.py
apps/api/: apps.py
apps/bots/: apps.py  models.py
apps/core/: apps.py  fields.py  models.py  urls.py
apps/linux/: apps.py  blocks.py
apps/nets/: apps.py
apps/nets/services/: dialogpt.py
apps/notify/: base.py  notify.py  scheduler.py
apps/users/: apps.py  models.py
apps/users/migrations/: 0001_initial.py
cad_models/: .gitignore  README.md  extract_model_data.py  parameters.py
cad_models/export/: .gitignore  README.md
config/: .env.template  drone_config.yaml  mavproxy_config.yaml  pixhawk_config.yaml  robot_config.yaml
config/launch/: default.launch.py  drone_full.launch.py  navigation_full.launch.py  pixhawk.launch.py  stm32_interface.launch.py  web_interface.launch.py
docker/: Dockerfile  docker-compose.prod.yml  entrypoint.sh  nginx.conf
docker/app/: Dockerfile
docker/caddy/: Caddyfile
docker/django/: Dockerfile  ci.sh  entrypoint.sh  gunicorn.sh  gunicorn_config.py  prestart.sh
docker/postgres/: Dockerfile  init.sql
docker/scripts/: dev-celery.sh  dev-consumers.sh  dev-server.sh  eventler-producer.sh  fmt.sh  migrate.sh
docker/scripts/utils/: prestart.sh  start-gunicorn.sh
docs/: API.md  ARCHITECTURE.md  BEELINK_MINI_PC_SETUP.md  CAMERA_SETUP.md  EXAMPLES.md  FACE_DETECTION_SETUP.md  HARDWARE_RECOMMENDATIONS.md  LIDAR_SETUP.md  README.md  RPLIDAR_TOF_C1_SETUP.md  SLAM_NAVIGATION_SETUP.md  SPEECH_SETUP.md  STM32_PROTOCOL.md  WHY_RASPBERRY_PI.md  conf.py
docs/_templates/: moreinfo.html
nginx/: nginx.conf
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/control/: package.xml  setup.py
ros2_ws/src/core/: package.xml  setup.py
ros2_ws/src/interface/: package.xml  setup.py
ros2_ws/src/node/: package.xml  setup.py
ros2_ws/src/robot/: package.xml  setup.py
ros2_ws/src/watchdog_camera/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/watchdog_common/: README.md  package.xml  setup.py
ros2_ws/src/watchdog_controller/: package.xml  setup.cfg  setup.py
ros2_ws/src/watchdog_detection/: package.xml  setup.cfg  setup.py
ros2_ws/src/watchdog_face_detection/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/watchdog_gimbal/: package.xml  setup.cfg  setup.py
ros2_ws/src/watchdog_gimbal/watchdog_gimbal/: gimbal_node.py
ros2_ws/src/watchdog_lidar/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/watchdog_msgs/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/watchdog_msgs/msg/: ControllerState.msg  Detection.msg  DetectionArray.msg  FaceDetection.msg  FaceDetections.msg  RobotStatus.msg
ros2_ws/src/watchdog_navigation/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/watchdog_pixhawk_interface/: package.xml  setup.cfg  setup.py
ros2_ws/src/watchdog_speech/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/watchdog_stm32_interface/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/watchdog_thermal/: package.xml  setup.cfg  setup.py
ros2_ws/src/watchdog_thermal/watchdog_thermal/: thermal_node.py
scripts/: entrypoint.sh  install_dependencies.sh  setup_mavproxy.sh  setup_wifi_ap.sh
server/: asgi.py  initializer.py  main.py  urls.py
server/api/v1/: __init__.py
server/apps/bots/: apps.py
server/apps/core/: models.py  views.py
server/apps/linux/: apps.py
server/apps/main/: models.py
server/apps/nets/: apps.py
server/apps/users/: admin.py  models.py
server/apps/utils/: strategies.py
server/config/: db.py  openapi.py
server/settings/: __init__.py
server/settings/components/: __init__.py  caches.py  common.py  logging.py
server/settings/environments/: dev.py  development.py  prod.py  production.py  test.py
src/: bot.py
stm32_firmware/: Makefile.example  PINOUT.md  QUICK_START.md  README.md  STM32CubeMX_Configuration.md
stm32_firmware/docs/: BUILD_GUIDE.md  STM32_SETUP.md
stm32_firmware/src/: communication.c  communication.h  encoder_reader.c  encoder_reader.h  main.c  main.h  main_example.c  motor_control.c  motor_control.h
tests/: conftest.py  test_example.py
watchdog-backend/: asgi.py  urls.py
watchdog-backend/settings/: __init__.py
watchdog-backend/settings/components/: common.py
watchdog-backend/settings/environments/: development.py  production.py
(+98 files in other folders)
