[project]
name = "watchdog-node"
version = "0.1.0"
description = "WatchDog Main Node"
authors = [
    {name = "NickiHell", email = "nickihell@ya.ru"},
]

requires-python = ">=3.11,<4.0"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    # BASE
    "rq>=2.6.0",
    "redis>=6.4.0",  # Updated from 5.2.1 to 6.4.0 (from main)
    "pandas>=2.2.3",
    "transformers>=4.56.1",
    "speakerpy>=0.1.2",
    "pyside6>=6.9.0",
    "outcome>=1.3.0.post0",
    "trio>=0.29.0",
    "loguru>=0.7.3",
    "setuptools>=80.0.0",
    "pynput>=1.8.1",
    "pyserial>=3.5",
    # Speech processing
    "vosk>=0.3.45",
    "speechbrain>=0.5.16",
    "silero>=0.0.1",
    "soundfile>=0.12.1",
    "pyaudio>=0.2.14",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "openai-whisper>=20231117",
    # Face detection and recognition
    "opencv-python>=4.8.0",
    "face-recognition>=1.3.0",
    "dlib>=19.24.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.12",
    "black>=25.1.0",
    "pytest>=8.4.2",
]

[tool.ruff]
line-length = 120
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "B", # flake-bugbear
  "Q", # flake8-quotes
  "PT", # flake8-pytest-style
  "RET", # flake8-return
  "SIM", # flake8-simplify
  "FBT", # flake8-boolean-trap
  "C4", # flake8-comprehensions
  "PIE", # flake8-pie
  "TRY", # tryceratops
  "RUF", # ruff
  "PL", # pylint
  "DTZ", # flake8-datetimez
  "UP", # pyupgrade
  "C90", # mccabe
  "COM", # flake8-commas
  "INP", # flake8-no-pep420
  "TID", # flake8-tidy-imports
  "PTH", # flake8-use-pathlib
  "ERA", # eradicate
]

ignore = [
  "Q000",
  "E501", # Never enforce line length
  "RET504", # Unnecessary variable assignment before `return` statement
  "RUF001", # ruff unicode specific rules
  "RUF002", # ruff unicode specific rules
  "RUF003", # ruff unicode specific rules
  "TRY003", # Avoid specifying long messages outside the exception class
]

unfixable = [
  "B", # Avoid trying to fix flake8-bugbear violations.
  "ERA", # Avoid deleting commented-out code
]

extend-exclude = []

[tool.ruff.mccabe]
max-complexity = 10

[tool.black]
line-length = 120
target-version = ["py311"]
skip-string-normalization = true

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
