<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>watchdog_gimbal</name>
  <version>0.1.0</version>
  <description>Управление подвесом SIYI A8 mini через MAVLink Gimbal Protocol v2.
  Поддерживает автослежение за объектами из /detection/tracks и ручное управление
  с RC пульта через /rc/gimbal_cmd.</description>
  <maintainer email="todo@todo.com">watchdog</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>watchdog_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
