<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>watchdog_thermal</name>
  <version>0.1.0</version>
  <description>Термоуправление для дрона Watchdog.
  DS18B20 через 1-Wire GPIO, вентилятор через hardware PWM, нагреватель LiDAR мачты
  через MOSFET. Диапазон: −5...+30°C.</description>
  <maintainer email="todo@todo.com">watchdog</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
